--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -127,14 +127,14 @@ body{
     opacity: 0.8;
 }
 
-.redes-sociais .curriculo{
+.redes-sociais .Curriculo{
     background-color: #b48621;
 }
 
-.redes-sociais .linkedin{
+.redes-sociais .LinkedIn{
     background-color: #b48621;
 }
 
-.redes-sociais .github{
+.redes-sociais .GitHub{
     background-color: #b48621;
 }
